--- a/app/css/style.css
+++ b/app/css/style.css
@@ -5,4 +5,32 @@
 
 /**********************************************************navbar******************************************************/
 
+.webpage-navbar {
+    border-radius: 0!important;
+}
+.webpage-navbar .navbar-header .navbar-brand {
+    padding: 0;
+}
+.webpage-navbar .navbar-brand .logo {
+    height: 50px;
+    padding: 5px 0;
+}
+
+.navbar-right-side {
+    float: right;
+    color: #9d9d9d;
+    margin-right: 0;
+}
+
+.user-card {
+    height: 50px;
+    line-height: 50px;
+}
+.user-card > img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
 /**********************************************************navbar******************************************************/
