--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,16 +1,25 @@
+/**********************************************************Common******************************************************/
+
+@media (min-width: 768px) {
+    .navbar > .container .navbar-brand {
+        margin-left: 0;
+    }
+}
+
 
 /**********************************************************Common******************************************************/
 
-/**********************************************************Common******************************************************/
 
 /**********************************************************navbar******************************************************/
 
 .webpage-navbar {
     border-radius: 0!important;
 }
+
 .webpage-navbar .navbar-header .navbar-brand {
     padding: 0;
 }
+
 .webpage-navbar .navbar-brand .logo {
     height: 50px;
     padding: 5px 0;
@@ -26,11 +35,13 @@
     height: 50px;
     line-height: 50px;
 }
+
 .user-card > img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     vertical-align: middle;
 }
+
 
 /**********************************************************navbar******************************************************/
